# hierarchical-alignment

./: README  aclocal.m4  configure.ac
m4/: Makefile  Makefile.in
src/: Makefile.am
src/alignment/: Makefile.am
src/alignment/includes/: AbstractDistanceMeasure.hh  MemoryPool.hh  NW.hh  SW.hh  SimilarityAlgorithm.hh
src/main/: CL.cc  Makefile.am  main.cc
src/main/includes/: CL.hh  TreePathSimilarityMeasure.hh
